--- a/CustomListView/app/src/main/res/layout/my_listview_layput.xml
+++ b/CustomListView/app/src/main/res/layout/my_listview_layput.xml
@@ -8,21 +8,20 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="200dp"
+        android:layout_height="100dp"
         android:layout_margin="0dp"
-        android:layout_marginTop="4dp"
         android:adjustViewBounds="false"
         android:cropToPadding="false"
-        android:scaleType="fitCenter"
+        android:scaleType="centerCrop"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_launcher_background" />
+        app:srcCompat="@drawable/image1234" />
 
     <LinearLayout
         android:id="@+id/linearLayOut"
-        android:layout_width="0dp"
-        android:layout_height="108dp"
+        android:layout_width="205dp"
+        android:layout_height="97dp"
         android:layout_margin="0dp"
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
