--- a/UnitConvertor/app/src/main/res/layout/activity_main.xml
+++ b/UnitConvertor/app/src/main/res/layout/activity_main.xml
@@ -25,7 +25,7 @@
         android:layout_marginTop="92dp"
         android:ems="10"
         android:hint="Enter value in KG"
-        android:inputType="textPersonName"
+        android:inputType="numberDecimal"
         android:minHeight="48dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
