--- a/LuckyNumberApp/app/src/main/res/values/themes.xml
+++ b/LuckyNumberApp/app/src/main/res/values/themes.xml
@@ -3,9 +3,11 @@
     <style name="Theme.LuckyNumberApp" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_500</item>
+        <!-- Status Bar -->
         <item name="colorPrimaryVariant">@color/purple_700</item>
+        <!-- Color on Buttons -->
         <item name="colorOnPrimary">@color/white</item>
-        <!-- Secondary brand color. -->
+        <!-- Secondary brand color. EditText -->
         <item name="colorSecondary">@color/teal_200</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
