--- a/MusicPlayerApp/app/src/main/res/layout/activity_music_player.xml
+++ b/MusicPlayerApp/app/src/main/res/layout/activity_music_player.xml
@@ -1,9 +1,109 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MusicPlayerActivity">
+    tools:context=".MusicPlayerActivity"
+    android:background="#F50057"
+    android:padding="16dp">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        tools:text="Title of the Song"
+        android:textSize="20sp"
+        android:textColor="@android:color/white"
+        android:padding="16dp"
+        android:singleLine="true"
+        android:ellipsize="marquee"
+        android:id="@+id/song_title"
+        android:layout_centerHorizontal="true"
+        />
+
+    <ImageView
+        android:id="@+id/music_player_icon_big"
+        android:layout_width="240dp"
+        android:layout_height="240dp"
+        android:layout_above="@id/controls_container"
+        android:layout_marginBottom="32dp"
+        android:padding="16dp"
+        android:src="@drawable/music_icon_big"
+        android:layout_centerHorizontal="true"/>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/controls_container"
+        android:layout_alignParentBottom="true"
+        android:padding="40dp"
+        >
+
+        <SeekBar
+            android:id="@+id/seek_bar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginBottom="10dp"
+            android:backgroundTint="@android:color/white" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            tools:text="0:00"
+            android:textColor="@android:color/white"
+            android:layout_margin="20dp"
+            android:id="@+id/current_time"
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/seek_bar"
+            />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            tools:text="0:00"
+            android:textColor="@android:color/white"
+            android:layout_margin="20dp"
+            android:id="@+id/total_time"
+            android:layout_alignParentEnd="true"
+            android:layout_below="@+id/seek_bar"
+            />
+        
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/total_time"
+            android:padding="20dp"
+            >
+            
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_baseline_skip_previous_24"
+                android:id="@+id/previous"
+                android:layout_alignParentStart="true"
+                android:layout_centerVertical="true"
+                />
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_baseline_skip_next_24"
+                android:id="@+id/next"
+                android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true"
+                />
+
+            <ImageView
+                android:id="@+id/play_pause"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:layout_centerHorizontal="true"
+                android:src="@drawable/ic_baseline_play_arrow_24" />
+        </RelativeLayout>
+    </RelativeLayout>
+
+</RelativeLayout>
