--- a/FragmentsDemo/app/src/main/res/layout/activity_main.xml
+++ b/FragmentsDemo/app/src/main/res/layout/activity_main.xml
@@ -5,31 +5,27 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".MainActivity"
-    >
+    tools:context=".MainActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
         android:background="#C9A8CF"
-        >
+        android:orientation="horizontal">
 
         <Button
             android:id="@+id/fragment_one_btn"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="@string/fragment_one_btn_text"
-            />
+            android:text="@string/fragment_one_btn_text" />
 
         <Button
             android:id="@+id/fragment_two_btn"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="@string/fragment_two_btn_text"
-            />
+            android:text="@string/fragment_two_btn_text" />
 
     </LinearLayout>
 
@@ -37,8 +33,7 @@
         android:id="@+id/fragment_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        >
+        android:orientation="vertical">
 
 
     </LinearLayout>
