--- a/MiwokApp/app/src/main/res/layout/activity_main.xml
+++ b/MiwokApp/app/src/main/res/layout/activity_main.xml
@@ -3,56 +3,24 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/tan_background"
     android:orientation="vertical"
     tools:context=".MainActivity">
 
-    <!-- Numbers category -->
-    <FrameLayout
+    <com.google.android.material.tabs.TabLayout
+        android:id="@+id/tab_layout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/category_numbers">
+        android:layout_height="56dp"
+        app:tabIndicatorColor="@color/lightGrey"
+        app:tabTextColor="@color/lightGrey"
+        app:tabSelectedTextColor="@android:color/white"
+        android:background="@color/primary_color"
+        />
 
-        <TextView
-            android:id="@+id/numbers"
-            style="@style/CategoryStyle"
-            android:text="@string/category_numbers" />
-    </FrameLayout>
-
-    <!-- Family category -->
-    <FrameLayout
+    <androidx.viewpager.widget.ViewPager
+        android:id="@+id/view_pager"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/category_family">
-
-        <TextView
-            android:id="@+id/family"
-            style="@style/CategoryStyle"
-            android:text="@string/category_family" />
-    </FrameLayout>
-
-    <!-- Colors category -->
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/category_colors">
-
-        <TextView
-            android:id="@+id/colors"
-            style="@style/CategoryStyle"
-            android:text="@string/category_colors" />
-    </FrameLayout>
-
-    <!-- Phrases category -->
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/category_phrases">
-
-        <TextView
-            android:id="@+id/phrases"
-            style="@style/CategoryStyle"
-            android:text="@string/category_phrases" />
-    </FrameLayout>
-
+        android:layout_height="match_parent"
+        />
 </LinearLayout>
